--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,233 @@
-python-dotenv
-flask
-flask-cors
-langchain
-langchain-openai
-langchain-community
-langchain-core
-tavily-python
-pinecone
-openai
-edge-tts
-aiohttp
-requests
-langdetect
-gTTS
+accelerate==1.10.1
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.11.0
+attrs==25.4.0
+audioop-lts==0.2.2
+audioread==3.0.1
+azure-common==1.1.28
+azure-core==1.36.0
+azure-identity==1.15.0
+azure-keyvault-secrets==4.7.0
+backoff==2.2.1
+bcrypt==5.0.0
+blinker==1.9.0
+boto3==1.40.55
+botocore==1.40.55
+Brotli==1.1.0
+build==1.3.0
+cached_path==1.8.0
+cachetools==6.2.1
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.4
+chromadb==1.2.0
+click==8.1.8
+coloredlogs==15.0.1
+contourpy==1.3.3
+cryptography==46.0.3
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==4.2.0
+decorator==5.2.1
+dill==0.4.0
+distro==1.9.0
+dotenv==0.9.9
+durationpy==0.10
+einops==0.8.1
+einx==0.3.0
+ema-pytorch==0.7.7
+encodec==0.1.1
+# Editable install with no version control (f5-tts==1.0.1)
+-e /Users/anhdnv/Projects/AI Elevate/Elevate AI_DN06_HoaTien_Workshop 03/F5-TTS-Vietnamese
+fastapi==0.119.0
+ffmpy==0.6.3
+filelock==3.20.0
+Flask==2.2.2
+flask-cors==6.0.1
+flatbuffers==25.9.23
+fonttools==4.60.1
+frozendict==2.4.6
+frozenlist==1.8.0
+fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-api-core==2.26.0
+google-auth==2.41.1
+google-cloud-core==2.4.3
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+gradio==5.49.1
+gradio_client==1.13.3
+groovy==0.1.2
+grpcio==1.75.1
+gTTS==2.5.4
+h11==0.16.0
+hf-xet==1.1.10
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.35.3
+humanfriendly==10.0
+hydra-core==1.3.2
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+iniconfig==2.1.0
+isodate==0.7.2
+itsdangerous==2.2.0
+jieba==0.42.1
+Jinja2==3.1.6
+jiter==0.11.0
+jmespath==1.0.1
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
+kubernetes==34.1.0
+langchain==1.0.0
+langchain-classic==1.0.0
+langchain-community==0.4
+langchain-core==1.0.0
+langchain-openai==1.0.0
+langchain-text-splitters==1.0.0
+langdetect==1.0.9
+langgraph==1.0.0
+langgraph-checkpoint==2.1.2
+langgraph-prebuilt==1.0.0
+langgraph-sdk==0.2.9
+langsmith==0.4.37
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.45.1
+loguru==0.7.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==3.26.1
+matplotlib==3.10.7
+mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
+msal==1.34.0
+msal-extensions==1.3.1
+msgpack==1.1.2
+multidict==6.7.0
+multiprocess==0.70.16
+mypy_extensions==1.1.0
+networkx==3.5
+numba==0.62.1
+numpy==1.26.4
+oauthlib==3.3.1
+omegaconf==2.3.0
+onnxruntime==1.23.1
+openai==2.3.0
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+orjson==3.11.3
+ormsgpack==1.11.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+platformdirs==4.5.0
+pluggy==1.6.0
+pooch==1.8.2
+posthog==5.4.0
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==6.33.0
+psutil==7.1.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
+pycparser==2.23
+pydantic==2.11.9
+pydantic-settings==2.11.0
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
+PyJWT==2.10.1
+pyparsing==3.2.5
+PyPika==0.48.9
+pypinyin==0.55.0
+pyproject_hooks==1.2.0
+pytest==7.4.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+regex==2025.9.18
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.27.1
+rsa==4.9.1
+ruff==0.14.1
+s3transfer==0.14.0
+safehttpx==0.1.6
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+semantic-version==2.10.0
+sentry-sdk==2.42.0
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soundfile==0.13.1
+soxr==1.0.0
+SQLAlchemy==2.0.44
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+standard-sunau==3.13.0
+starlette==0.48.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+tokenizers==0.22.1
+tomli==2.3.0
+tomlkit==0.13.3
+torch==2.9.0
+torchaudio==2.9.0
+torchdiffeq==0.2.5
+tqdm==4.67.1
+transformers==4.57.1
+transformers-stream-generator==0.0.5
+typer==0.19.2
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.3.0
+uvicorn==0.37.0
+uvloop==0.22.1
+vocos==0.1.0
+wandb==0.22.2
+watchfiles==1.1.1
+websocket-client==1.9.0
+websockets==15.0.1
+Werkzeug==2.3.8
+x-transformers==2.9.2
+xxhash==3.6.0
+yarl==1.22.0
+zipp==3.23.0
+zstandard==0.25.0
