--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,6 @@ einops==0.8.1
 einx==0.3.0
 ema-pytorch==0.7.7
 encodec==0.1.1
-f5-tts==1.0.1
 fastapi==0.119.0
 ffmpy==0.6.3
 filelock==3.20.0
@@ -65,7 +64,6 @@ gradio==5.49.1
 gradio_client==1.13.3
 groovy==0.1.2
 grpcio==1.75.1
-gTTS==2.5.4
 h11==0.16.0
 hf-xet==1.1.10
 httpcore==1.0.9
@@ -229,3 +227,4 @@ xxhash==3.6.0
 yarl==1.22.0
 zipp==3.23.0
 zstandard==0.25.0
+pinecone
